Bug 1465771 - Avoid possibly treating a quoted font-family name as a CSS generic in the fontconfig-based backend. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D26916