gfx/thebes/gfxFontFamilyList.h
@@ -49,6 +49,10 @@ struct FontFamilyName final {
 
   bool IsGeneric() const { return !IsNamed(); }
 
+  bool IsQuoted() const {
+    return mSyntax == StyleFontFamilyNameSyntax::Quoted;
+  }
+
   void AppendToString(nsACString& aFamilyList, bool aQuotes = true) const {
     if (IsNamed()) {
       if (mSyntax == Syntax::Identifiers) {
