gfx/thebes/gfxTextRun.h
@@ -1257,6 +1257,7 @@ class gfxFontGroup final : public gfxTextRunFactory {
 
   // lookup and add a font with a given name (i.e. *not* a generic!)
   void AddPlatformFont(const nsACString& aName,
+                       bool aQuotedName,
                        nsTArray<FamilyAndGeneric>& aFamilyList);
 
   // do style selection and add entries to list
